# chromoxaic

./: .clang-format  CMakeLists.txt
cefcapi/: cef_app.h  cef_base.h  cef_client.h  cef_life_span_handler.h  cef_permission_handler.h  cef_render_handler.h
src/: main.c  mid_window.h
